--- a/_posts/2020-09-07-test.markdown
+++ b/_posts/2020-09-07-test.markdown
@@ -2,9 +2,9 @@
 layout: post
 title:  "Test!"
 date:   2020-09-07 12:57:59 -0300
-categories: jekyll update
+categories: test
 author: "ReddyyZ"
-tags: test hack
+tags: test
 ---
 You’ll find this post in your `_posts` directory. Go ahead and edit it and re-build the site to see your changes. You can rebuild the site in many different ways, but the most common way is to run `jekyll serve`, which launches a web server and auto-regenerates your site when a file is updated.
 
